<resources>
    <string name="app_name">Uni cooking</string>
    <string name="my_ingredients">My Ingredients</string>
    <string name="add">Add</string>
    <string name="enter_ingredient">Enter ingredient</string>
    <string name="selected_ingredients">Selected Ingredients:</string>
    <string name="delete_selected_ingredients">Clear</string>
    <string name="get_started">Get Started</string>
    <string name="photo_description">Photo with apps\' logo</string>
    <string name="search">Search</string>
    <string name="recipe_placeholder">Recipe Placeholder</string>
    <string name="recipes_title">Recipes</string>
    <string name="recipes_scrollview_content_description">Scrollview</string>
</resources>