<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MyIngredientsActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_ingredients"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />


    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editIngredient"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <AutoCompleteTextView
        android:id="@+id/editIngredient"
        android:layout_width="175dp"
        android:layout_height="62dp"
        android:layout_marginTop="12dp"
        android:hint="@string/enter_ingredient"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@id/buttonAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <TextView
        android:id="@+id/textViewSelectedIngredientsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_ingredients"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editIngredient"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/delete_selected_ingredients"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toEndOf="@+id/textViewSelectedIngredientsTitle"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd"
        app:layout_constraintVertical_bias="1.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSelectedIngredientsTitle"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/layoutIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="editIngredient,buttonAdd" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>


